Improved dependency managment.